--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,11 +3,24 @@
 
   <p><strong>Reviews</strong></p>
   <ul class="list-group">
-    <% @restaurant.reviews.each do |review| %>
+    <% if @restaurant.reviews = [] %>
+      <p>No reviews yet! Add one?</p>
+    <% else %>
+      <% @restaurant.reviews.each do |review| %>
       <li class="list-group-item"><%= review.content %></li>
+      <% end %>
     <% end %>
   </ul>
   <br>
-  <%= link_to "Add Review", new_restaurant_review_path(@restaurant)  %>
+
+  <div class="container">
+    <h1>Add a Review for <%= @restaurant.name %></h1>
+    <%= simple_form_for([@restaurant, @review] ) do |r| %>
+      <%= r.input :content %>
+      <%= r.input :rating, collection: [1, 2, 3, 4, 5] %>
+      <%= r.submit %>
+    <% end %>
+  </div>
+
   <%= link_to "Back to All Restaurants", restaurants_path %>
 </div>
